--- a/package.json
+++ b/package.json
@@ -1,18 +1,21 @@
 {
-  "name": "infis_chat",
+  "name": "infischat",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Multi-language chat application",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
-    "mongoose": "^8.18.0",
-    "pg": "^8.16.3",
-    "socket.io": "^4.8.1"
+    "express": "^4.18.2",
+    "socket.io": "^4.7.2",
+    "pg": "^8.11.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=14.0.0"
   }
 }
